REVERT: Merged branch 'master' into 'Issue-10-Implement-Media-Release-form'
(reverted from commit 0c9f84270e0fe3e090dcf9c5ac8fef694f3f1d2e)

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/emergency_authorization.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/emergency_authorization.html
@@ -1,96 +1,4 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
-    <h1> Authorization for Emergency Medical Treatment </h1>
-    {% if error_text %}
-        <p><strong>
-            {{ error_text }}
-        </strong></p>
-    {% endif %}
-    <form action="{% url 'public-form-emerg-auth' %}" method="post">
-        {% csrf_token %}
-        <p>
-            Name: {{ form.name }}
-            <span class="error_message">
-                {{ form.name.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Date of Birth: {{ form.birth_date }}
-            <span class="error_message">
-                {{ form.birth_date.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Primary Physician: {{ form.primary_physician_name }}
-            <span class="error_message">
-                {{ form.primary_physician_name.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Physician Phone: {{ form.primary_physician_phone }}
-            <span class="error_message">
-                {{ form.primary_physician_phone.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Prefered Medical Facility: {{ form.pref_medical_facility }}
-            <span class="error_message">
-                {{ form.pref_medical_facility.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Insurance Provider: {{ form.insurance_provider }}
-            <span class="error_message">
-                {{ form.insurance_provider.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Insurance Policy Number: {{ form.insurance_policy_num }}
-            <span class="error_message">
-                {{ form.insurance_policy_num.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Emergency Contact: {{ form.emerg_contact_name }}
-            <span class="error_message">
-                {{ form.emerg_contact_name.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Emergency Contact Phone: {{ form.emerg_contact_phone }}
-            <span class="error_message">
-                {{ form.emerg_contact_phone.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            Relation to Participant: {{ form.emerg_contact_relation }}
-            <span class="error_message">
-                {{ form.emerg_contact_relation.errors.as_text }}
-            </span>
-        </p>
-        <p>
-            If medical care is required in conjunction with any C-Bar activity
-             and normal permission is not available in a timely manner, the
-             undersigned authorizes C-Bar to secure and retain appropriate
-             medical care and transportation, if needed. This authorization
-             includes releasing medical information on this form to emergency
-             medical personnel, a physician, or the medical facility providing
-             the treatment and may include x-rays, surgery, hospitalization,
-             medication, and any treatment deemed “lifesaving” by the physician.
-             This provision will only be invoked if the person(s) listed above
-             cannot be reached.
-        </p>
-        <p>
-            I, {{ form.consents_emerg_med_treatment }}, Date: {{ form.date }}
-            <span class="error_message">
-                {{ form.date.errors.as_text }}
-            </span>
-
-             Signature: {{ form.signature }}
-            <span class="error_message">
-                {{ form.signature.errors.as_text }}
-            </span>
-        </p>
-        <input type="Submit" value="Submit" />
-    </form>
+    Emergeny Authorization form
 {% endblock %}
