[Re #10] Added per field error text to 'media.html'

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/media.html
@@ -1,6 +1,11 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
     <h1>Photo &amp; Media Release</h1>
+    {% if error_text %}
+        <p><strong>
+            {{ error_text }}
+        </strong></p>
+    {% endif %}
     <form action="{% url 'public-form-media' %}" method="post">
         {% csrf_token %}
         <p>
@@ -11,11 +16,31 @@
              or for any other use for the benefit of the program.
         </p>
         <p>
-            I, {{ form.name }}, born {{ form.birth_date }}, {{ form.consent }}
-             to the above.
+            I, {{ form.name }}
+            <span class="error_message">
+                {{ form.name.errors.as_text }}
+            </span>
+
+            , born {{ form.birth_date }}
+            <span class="error_message">
+                {{ form.birth_date.errors.as_text }}
+            </span>
+
+            , {{ form.consent }}
+            <span class="error_message">
+                {{ form.consent.errors.as_text }}
+            </span> to the above.
         </p>
         <p>
-            Signature: {{ form.signature }}. Date: {{ form.date }}
+            Signature: {{ form.signature }}.
+            <span class="error_message">
+                {{ form.signature.errors.as_text }}
+            </span>
+
+             Date: {{ form.date }}
+            <span class="error_message">
+                {{ form.date.errors.as_text }}
+            </span>
         </p>
         <input type="submit" value="Submit" />
     </form>
