[Re #11] Correct typo 'backround' -> 'background'

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/public.html
@@ -10,7 +10,7 @@
         <li><a href="{% url 'public-form-emerg-auth' %}">Emegency Medical Treatment Authorization</a></li>
         <li><a href="{% url 'public-form-liability' %}">Liability Release</a></li>
         <li><a href="{% url 'public-form-media' %}">Media Release</a></li>
-        <li><a href="{% url 'public-form-backround' %}">Background Check Authorization</a></li>
+        <li><a href="{% url 'public-form-background' %}">Background Check Authorization</a></li>
         <li><a href="{% url 'public-form-seizure' %}">Seizure Evaluation</a></li>
     </ul>
 {% endblock %}
