[Re #11] Added missing submit button to 'background.html'

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/background.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/background.html
@@ -40,7 +40,6 @@
              {{ form.driver_license_num.errors.as_text }}
          </span>
          </p>
-
-
-
+         <input type="Submit" value="Submit" />
+     </form>
 {% endblock %}
