[Re #21] Created blank admin index page that requires the user to log in first.

--- a/cb_info_db/cbar_db/templates/cbar_db/template.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/template.html
@@ -10,7 +10,7 @@
             <div class="nav">
                 <a class="button" href="{% url 'index-public-forms' %}">Public Forms</a>
                 <a class="button" href="">Private Forms</a>
-                <a class="button" href="">Administration</a>
+                <a class="button" href="{% url 'index-private-admin' %}">Administration</a>
             </div>
         </div>
 
