--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -4,7 +4,11 @@
     <h2>Participants</h2>
     <ul>
         {% for participant in participants %}
-            <li>{{ participant.name }} ({{ participant.birth_date }})</li>
+            <li>
+                <a href="{% url 'participant-record' participant.participant_id %}">
+                    {{ participant.name }} ({{ participant.birth_date }})
+                </a>
+            </li>
         {% endfor %}
     </ul>
 {% endblock %}
