[Re #21] WIP: Adding links to releases on the Participant record

--- a/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
+++ b/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
@@ -32,6 +32,7 @@ a:hover {
     background-color: @color_grey_very_light;
     padding: 1.5em;
     margin-bottom: 3em;
+    overflow: hidden;
 }
 
 #header a {
