--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -79,12 +79,34 @@
             {% endfor %}
         </div>
 
-        <div id="participant_emergency_authorization" style="float: left;">
+        <div id="participant_emergency_authorizations" style="float: left;">
             <h3>Emergency Medical Treatment Authorizations</h3>
             {% for emergency_authorization in emergency_authorizations %}
                 <li>
                     <a href="{% url 'participant-record' participant.participant_id %}">
                         {{ emergency_authorization.date }} Emergency Medical Treatment Authorization
+                    </a>
+                </li>
+            {% endfor %}
+        </div>
+
+        <div id="participant_liability_releases" style="float: left;">
+            <h3>Liability Releases</h3>
+            {% for liability_release in liability_releases %}
+                <li>
+                    <a href="{% url 'participant-record' participant.participant_id %}">
+                        {{ liability_release.date }} Liability Release
+                    </a>
+                </li>
+            {% endfor %}
+        </div>
+
+        <div id="participant_background_check_authorizations" style="float: left;">
+            <h3>Background Check Authorizations</h3>
+            {% for background_check in background_checks %}
+                <li>
+                    <a href="{% url 'participant-record' participant.participant_id %}">
+                        {{ background_check.date }} Background Check Authorization
                     </a>
                 </li>
             {% endfor %}
