--- a/cb_info_db/cbar_db/templates/cbar_db/template.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/template.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <head>
     <link rel="stylesheet" type="text/css" href="{% static "cbar_db/css/cbar_styles.css" %}" />
+    {% block header %}{% endblock %}
     <title>C-Bar Information Database</title>
 </head>
 <body>
