--- a/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
+++ b/cb_info_db/cbar_db/static_source/cbar_db/less/cbar_styles.less
@@ -8,8 +8,15 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0.5em;
-    color: @color_blue_dark;
     text-align: center;
+}
+
+h1 {
+    color: @color_blue_dark;
+}
+
+h2, h3, h4, h5, h6 {
+    color: @color_background_brown;
 }
 
 a {
