[Re #22] Added 'signature' and 'date' fields.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -57,6 +57,15 @@
             <span class="error_text">
                 {{ form.email.errors.as_text }}
             </span>
+            <br />
+            Signature: {{ form.signature }}
+            <span class="error_text">
+                {{ form.signature.errors.as_text }}
+            </span>
+            Date: {{ form.date }}
+            <span class="error_text">
+                {{ form.date.errors.as_text }}
+            </span>
         </p>
         <input type="Submit" value="Submit" />
     </form>
