--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -18,6 +18,24 @@
                 {{ form.birth_date.errors.as_text }}
             </span>
             <br />
+            Height: {{ form.height }}
+            <span class="error_message">
+                {{ form.height.errors.as_text }}
+            </span>
+            Weight: {{ form.weight }}
+            <span class="error_message">
+                {{ form.weight.errors.as_text }}
+            </span>
+            <br />
+            Gender: {{ form.gender }}
+            <span class="error_message">
+                {{ form.gender.errors.as_text }}
+            </span>
+            Minor Status: {{ form.minor_status }}
+            <span class="error_message">
+                {{ form.minor_status.errors.as_text }}
+            </span>
+            <br />
             School or Institution presently attending:
             {{ form.school_institution }}
             <span class="error_message">
@@ -50,7 +68,7 @@
             </span>
             Cell/Work Phone: {{ form.phone_cell_work }}
             <span class="error_text">
-                {{ form.phone_cell_work }}
+                {{ form.phone_cell_work.errors.as_text }}
             </span>
             <br />
             E-Mail Address: {{ form.email }}
