[Re #22] Changed "error_text" class to "error_message".

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -63,25 +63,25 @@
             </span>
             <br />
             Home Phone: {{ form.phone_home }}
-            <span class="error_text">
+            <span class="error_message">
                 {{ form.phone_home.errors.as_text }}
             </span>
             Cell/Work Phone: {{ form.phone_cell_work }}
-            <span class="error_text">
+            <span class="error_message">
                 {{ form.phone_cell_work.errors.as_text }}
             </span>
             <br />
             E-Mail Address: {{ form.email }}
-            <span class="error_text">
+            <span class="error_message">
                 {{ form.email.errors.as_text }}
             </span>
             <br />
             Signature: {{ form.signature }}
-            <span class="error_text">
+            <span class="error_message">
                 {{ form.signature.errors.as_text }}
             </span>
             Date: {{ form.date }}
-            <span class="error_text">
+            <span class="error_message">
                 {{ form.date.errors.as_text }}
             </span>
         </p>
